--- a/JokeWebAPP/Views/Home/Index.cshtml
+++ b/JokeWebAPP/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Joke Application</h1>
     <p>The foremost autority for good humor that you will find anywhere on your local host.</p>
 </div>
