--- a/JokeWebAPP/Views/Jokes/Edit.cshtml
+++ b/JokeWebAPP/Views/Jokes/Edit.cshtml
@@ -14,15 +14,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="JokeQuestion" class="control-label"></label>
+                <label asp-for="JokeQuestion" class="control-label">Question</label>
                 <input asp-for="JokeQuestion" class="form-control" />
                 <span asp-validation-for="JokeQuestion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="JokeAnswer" class="control-label"></label>
+                <label asp-for="JokeAnswer" class="control-label">Answer</label>
                 <input asp-for="JokeAnswer" class="form-control" />
                 <span asp-validation-for="JokeAnswer" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
